# messaging-server-client

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  a.out  buildUnix.sh  client  ip  rooms.txt  server  showip.c  str.h  test  test.c  tst
.cache/clangd/index/: client.c.2605CA22397D1099.idx  msg.h.E89CEFD68CCBE0DA.idx  server.c.F97253FCBEC0C152.idx  str.h.E080C8C302F755CB.idx
msg-client/: client
msg-server/: Makefile  test.cpp
old/msg-client/: Makefile
old/msg-client/src/: Main.cpp
old/msg-server/: channels  server
old/msg-server/src/: Main.cpp
old/old/: Main.c  old.c
src/: a.out  client  client.c  client.h  msg.c  msg.h  pack.h  server  server.c  server.h  srv  str  str.h
src/Client/: client  client.c  client.h  main.c
src/Lib/: a.out  list.h  str.h  test  test.c  vector.h
src/Lib1/: a.out  test.c
src/Server/: main.c  rooms.txt  server  server.c  server.h
